crates/carta/tests/snapshots/golden_e2e__ipynb__rst__attachment-order.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown
   :name: order

   Two attachments, referenced out of key order:

   |beta|

   |alpha|

.. |beta| image:: order-beta.png
.. |alpha| image:: order-alpha.png
