crates/carta/tests/snapshots/golden_e2e__ipynb__rst__attachment.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown
   :name: figure

   An embedded attachment:

   |a diagram|

.. |a diagram| image:: figure-diagram.png
