crates/carta/tests/snapshots/golden_e2e__ipynb__rst__cell-metadata-scalars.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell code
   :name: tagged

   .. code:: python

      value = 1
