crates/carta/tests/snapshots/golden_e2e__ipynb__rst__code-error.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell code
   :name: boom

   .. code:: python

      raise Error

   .. container:: output error

      ::

         Traceback
         Err: bad
