crates/carta/tests/snapshots/golden_e2e__ipynb__rst__code-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell code
   :name: render

   .. code:: python

      show_table()

   .. container:: output display_data

      .. raw:: html

         <table><tr><td>cell</td></tr></table>
