crates/carta/tests/snapshots/golden_e2e__ipynb__rst__code-image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell code
   :name: plot

   .. code:: python

      draw()

   .. container:: output display_data

      |image1|

.. |image1| image:: ddd8a63b8957c29356d1015e6040f47158d26c1d.png
