crates/carta/tests/snapshots/golden_e2e__ipynb__rst__code-stream.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell code
   :name: streams

   .. code:: python

      import sys
      print(42)
      sys.stderr.write("warning\n")

   .. container:: output stream stdout

      ::

         42

   .. container:: output stream stderr

      ::

         warning
