crates/carta/tests/snapshots/golden_e2e__ipynb__rst__definition-marker-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown
   :name: deffold

   A line of prose

   : not a definition list in this dialect
